# ExamForge-Math

./: .gitignore  =0.5  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-08-examforge-math.md
docs/superpowers/reviews/: 2026-07-08-phase1-acceptance.md  2026-07-08-phase1-eval.json
docs/superpowers/specs/: 2026-07-08-examforge-math-design.md
src/: asgi.py
src/examforge/: __init__.py
src/examforge/cli/: bootstrap.py  main.py
src/examforge/config/: __init__.py  settings.py
src/examforge/embedding/: __init__.py  factory.py  http_embedder.py  mock_embedder.py  types.py
src/examforge/llm/: __init__.py  factory.py  http_llm.py  mock_llm.py  prompts.py  schemas.py  types.py
src/examforge/models/: __init__.py  enums.py  method.py  problem.py  solution_instance.py
src/examforge/ocr/: __init__.py  service.py
src/examforge/pipeline/: __init__.py  classify.py  commit.py  errors.py  (+5 more)
tests/: conftest.py  test_smoke.py
tests/acceptance/: golden_set.json  run_eval.py
tests/cli/: test_cli.py
tests/config/: test_settings_store.py
tests/embedding/: test_factory.py  test_http_embedder.py  test_mock_embedder.py
tests/llm/: test_http_llm_contract.py  test_http_llm_error.py  test_mock_llm.py  test_prompts.py  test_schemas.py
tests/models/: test_method.py  test_problem.py  test_solution_instance.py
tests/ocr/: test_service.py
tests/pipeline/: test_classify.py  test_classify_subject_area.py  test_commit.py  test_extract.py  test_ingest.py  test_orchestrator.py  test_review.py
tests/qa/: test_qa.py
tests/report/: test_reporter.py
tests/repositories/: test_method_repo.py  test_problem_repo.py  test_solution_repo.py  test_vector_repo.py
tests/taxonomy/: test_loader.py
tests/web/: test_e2e.py  test_error_handler.py  test_health_and_index.py  test_ingest_ocr.py  test_review_methods.py  test_settings_route.py
(+37 files in other folders)
